// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  uuid  String @id @db.Uuid
  name  String
  posts Post[] // post uuid list

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Comment   Comment[]

  @@map("user")
}

enum ItemCategory {
  ELECTRONICS
  CARD
  CLOTHING
  BAG
  WALLET
  ACCESSORIES
  DOCUMENT
  ETC
}

enum PostStatus {
  IN_PROGRESS
  RESOLVED
  CANCELLED
}

enum PostType {
  FOUND
  LOST
}

model Post {
  id          Int      @id @default(autoincrement())
  type        PostType
  title       String   @db.VarChar(255)
  description String   @db.Text
  images      String[]

  category  ItemCategory @default(ETC)
  status    PostStatus
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt
  deletedAt DateTime?

  authorId String    @db.Uuid
  author   User      @relation(fields: [authorId], references: [uuid])
  comment  Comment[]

  buildingId     Int      @default(2)
  building       Building @relation(fields: [buildingId], references: [id])
  locationDetail String? // 세부 위치

  @@map("post")
}

model Building {
  id     Int    @id @default(autoincrement())
  name   String @unique() @db.VarChar(20)
  enName String @db.VarChar(20)
  gps    String @db.VarChar(30)
  code   String @db.VarChar(4) // 건물 번호 e.g. E11
  posts  Post[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("building")
}

enum CommentType {
  COMMENT // 일반 댓글
  REPLY // 대댓글
}

model Comment {
  id        Int         @id @default(autoincrement())
  content   String      @db.Text
  type      CommentType
  createdAt DateTime    @default(now())
  isDeleted Boolean     @default(false)

  postId Int
  post   Post @relation(fields: [postId], references: [id], onDelete: Cascade)

  authorId String @db.Uuid
  author   User   @relation(fields: [authorId], references: [uuid])

  parentId Int? // 상위 댓글 ID (대댓글인 경우 필요)
  parent   Comment?  @relation("ParentChild", fields: [parentId], references: [id], onDelete: Cascade)
  children Comment[] @relation("ParentChild")

  @@map("comment")
}
