Project find_it {
  database_type: 'PostgreSQL'
  Note: '분실물 찾기 서비스를 위한 DB Schema'
}

Enum item_category {
  ELECTRONICS  [note: '전자기기']
  CARD         [note: '카드']
  CLOTHING     [note: '의류']
  BAG          [note: '가방']
  WALLET       [note: '지갑']
  ACCESSORIES  [note: '액세서리']
  DOCUMENT     [note: '서류']
  ETC          [note: '기타']
}

Enum post_status {
  IN_PROGRESS [note: '진행 중']
  RESOLVED    [note: '해결됨']
  CANCELLED   [note: '취소됨']
}

Enum post_type {
  FOUND [note: '발견']
  LOST  [note: '분실']
}

Enum comment_type {
  COMMENT [note: '일반 댓글']
  REPLY   [note: '대댓글']
}

Table users {
  uuid uuid [pk, not null]
  name varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  
  Note: '사용자 정보'
}

Table posts {
  id serial [pk, not null]
  type post_type [not null, note: '게시글 타입 (발견/분실)']
  title varchar(255) [not null, note: '게시글 제목']
  description text [not null, note: '게시글 설명']
  images varchar[] [note: '이미지 URL 배열']
  category item_category [not null, default: 'ETC', note: '아이템 카테고리']
  status post_status [not null, note: '게시글 상태']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  deleted_at timestamp [note: '게시글 삭제 일자']
  author_id uuid [ref: > users.uuid, not null, note: '작성자 UUID']
  building_id int [ref: > buildings.id, not null, default: 2, note: '건물 ID']
  location_detail varchar [note: '세부 위치']

  indexes {
    author_id
    building_id
  }

  Note: '게시글 정보'
}

Table buildings {
  id serial [pk, not null]
  name varchar(20) [not null, unique, note: '건물명']
  en_name varchar(20) [not null, note: '건물명 (영문)']
  gps varchar(30) [not null, note: 'GPS 정보']
  code varchar(4) [not null, note: '건물 코드 (예: E11)']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  Note: '건물 정보'
}

Table comments {
  id serial [pk, not null]
  content text [not null, note: '댓글 내용']
  type comment_type [not null, note: '댓글 타입 (댓글/대댓글)']
  created_at timestamp [not null, default: `now()`]
  is_deleted boolean [not null, default: false, note: '댓글 삭제 여부']
  post_id int [ref: > posts.id, not null, note: '게시글 ID']
  author_id uuid [ref: > users.uuid, not null, note: '작성자 UUID']
  parent_id int [ref: > comments.id, note: '상위 댓글 ID']

  Note: '댓글 정보'
}
